# axiom_tilt

./: .env.example  .gitignore  README.md  TODO.md  axiom_tilt.md  environment.yml  pyproject.toml  requirements.txt
artifacts/ranker/: all_walks_summary.json
configs/: backtest.yaml  bandit.yaml  data.yaml  experiment.yaml  model_tabular.yaml  model_text.yaml  optimizer.yaml  policy.yaml
data/processed/: ccm_linktable.parquet
docs/: collaborator-setup.md  rclone-r2-template.conf  wrds-setup.md
experiments/: STATE.md  STATE_ROUND2.md  STATE_dylan.md  analyze_dylan.py  backtest_full_period.py  bootstrap_walk1.py  results.tsv  results_dylan.tsv  run_all_walks.py  run_one.py  run_one_dylan.py  sweep_runner.sh
logs/: clean_filings.out  edgar.pid  nohup_pipeline.out
notebooks/: 01_data_audit.ipynb  01_finbert_finetune.ipynb  02_finbert_embed_docs.ipynb  02_text_cleaning.ipynb  03_embedding_exploration.ipynb  03_finbert_embed_stockday.ipynb  04_feature_checks.ipynb  04_pca_text_features.ipynb  05_assemble_training_panel.ipynb  05_baseline_backtest.ipynb  06_result_visualization.ipynb  06_supervised_ranker.ipynb  07_rl_agent.ipynb  08_backtest.ipynb  09_no_text_ablation.ipynb
reports/: final_report.md
scripts/: build_finbert_notebook.py  build_pca_notebook.py  migrate_to_wrds.sh  sync_from_r2.sh  sync_to_r2.sh  wrds_inspect_ccm.py  wrds_inspect_compsamp.py  wrds_list_libraries.py
src/: __init__.py
tests/: test_action_projection.py  test_alignment.py  test_backtest_engine.py  test_candidate_selection.py  test_no_lookahead.py  test_optimizer.py
(+140 files in other folders)
